Fixed alignment issues and applied styles for responsive theming..

--- a/css/component.css
+++ b/css/component.css
@@ -10,14 +10,13 @@
 	-moz-transition: width 0.3s;
 	transition: width 0.3s;
 	-webkit-backface-visibility: hidden;
-	margin-top: 5px;
-	margin-top:5px;
+	margin-top:12px;
 	margin-right: -30px;
 }
 
 .sb-search-input {
 	position: absolute;
-	top: 5px;
+	top:0px;
 	right: 0;
 	border: none;
 	outline: none;
@@ -50,15 +49,15 @@
 
 .sb-icon-search,
 .sb-search-submit  {
-	width: 50px;
-	height: 50px;
+	width: 40px;
+	height: 40px;
 	display: block;
 	position: absolute;
 	right: 0;
 	top: -3px;
 	padding: 0;
 	margin: 0;
-	line-height: 60px;
+	line-height:40px;
 	text-align: center;
 	cursor: pointer;
 }
@@ -92,7 +91,7 @@
 }
 .sb-search.sb-search-open .sb-search-input{
 	background: #fff;
-	width: 65px;
+	width: 100%;
 }
 .sb-search.sb-search-open .sb-icon-search,
 .no-js .sb-search .sb-icon-search {
