--- a/css/normalize.css
+++ b/css/normalize.css
@@ -412,12 +412,12 @@ input[type="number"]::-webkit-outer-spin-button {
  *    (include `-moz` to future-proof).
  */
 
-input[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
+/** input[type="search"] {
+  -webkit-appearance: textfield; 
   -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box; /* 2 */
+  -webkit-box-sizing: content-box; 
   box-sizing: content-box;
-}
+} **/
 
 /**
  * Remove inner padding and search cancel button in Safari and Chrome on OS X.
@@ -485,4 +485,7 @@ th {
 }
 p{
   margin: 5px 0px;
+}
+.hidden{
+  display: none;
 }
